Update apache conf.

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,6 @@
-Options +FollowSymLinks
-ErrorDocument 404 /index.php
-
-RewriteRule    ^user/([0-9]+)/?$	index.php?include=user.php&id=$1    [NC,L]
-RewriteRule    ^store/([0-9]+)/?$	index.php?include=store.php&id=$1   [NC,L]
-RewriteRule    ^register$		index.php?include=register.php
-RewriteRule    ^game$			index.php?include=game.php 
-RewriteRule    ^character$		index.php?include=character.php 
-RewriteRule    ^logout$			index.php?include=logout.php 
+RewriteRule    ^user/([0-9]+)/?$  index.php?include=user.php&id=$1    [NC,L]
+RewriteRule    ^store/([0-9]+)/?$ index.php?include=store.php&id=$1   [NC,L]
+RewriteRule    ^register$         index.php?include=register.php      [QSA]
+RewriteRule    ^game$             index.php?include=game.php          [QSA]
+RewriteRule    ^character$        index.php?include=character.php     [QSA]
+RewriteRule    ^logout$           index.php?include=logout.php        [QSA]
