Added exit/entrance functionality.

--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,4 @@ RewriteRule    ^register$         index.php?include=register.php      [QSA]
 RewriteRule    ^game$             index.php?include=game.php          [QSA]
 RewriteRule    ^character$        index.php?include=character.php     [QSA]
 RewriteRule    ^logout$           index.php?include=logout.php        [QSA]
+RewriteRule    ^editor$           index.php?include=editor.php        [QSA]
