--- a/dungeons/happyfields.json
+++ b/dungeons/happyfields.json
@@ -3,12 +3,24 @@
   "sound": "happy_fields.mp3",
   "width": 40,
   "height": 40,
-  "terrain": [[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0,0,5,0,0,0,1,1,1,1,1,5,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0,5,0,0,0,0,0,1,1,1,5,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,5,0,0,0,0,1,1,1,5,1,1,1,5,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,5,5,0,0,0,1,1,1,5,5,5,5,5,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,5,0,0,0,0,1,1,1,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,5,0,0,0,0,1,1,1,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,0,5,0,0,0,0,0,1,1,1,1,1,1,1],[0,0,0,0,0,0,5,5,5,5,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,0,5,0,0,0,0,0,5,1,1,1,1,1,1],[0,0,0,5,5,5,5,7,7,5,5,5,5,0,0,0,0,0,0,0,0,0,2,2,2,3,3,4,0,0,0,0,0,1,1,1,1,1,1,1],[5,5,5,5,7,7,7,7,4,7,7,0,0,5,5,5,5,5,5,5,0,0,2,2,3,3,2,2,4,4,0,0,0,0,1,1,1,1,1,1],[0,0,0,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,5,5,5,5,3,3,2,2,2,2,0,0,0,0,0,0,1,1,1,1,1],[0,0,0,7,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,0,0,0,1,1,1,1,1],[0,0,0,7,7,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0,0,1,1,1,1],[0,0,0,0,7,4,7,7,4,7,7,7,7,7,0,0,0,0,0,0,0,0,0,7,4,2,2,2,2,2,2,2,0,0,0,0,0,1,1,1],[0,0,0,0,7,7,7,7,4,7,7,7,7,7,0,0,0,0,0,0,0,0,0,7,4,4,2,2,2,2,2,2,2,0,0,0,0,0,1,1],[0,0,0,0,0,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,7,4,2,2,2,2,2,2,2,0,0,0,0,0,0,0],[0,0,0,0,0,7,7,7,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,4,4,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,4,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0],[0,0,0,0,0,0,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0,0,0],[0,0,0,0,0,0,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,4,2,2,2,2,2,2,2,0,0,0],[0,0,0,0,0,0,0,0,7,4,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,4,2,2,2,2,2,2,2,2,0,0],[0,0,0,0,0,0,0,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,2,0],[0,0,0,0,0,0,0,7,4,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0],[0,0,0,0,0,0,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,0,0,0,0,0,0,0,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,7,7,0,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,7,7,4,7,0,7,7,7,7,0,0,7,7,0,0,0,0,0,0,0,0,2,2,2],[0,0,0,0,0,0,0,0,0,7,7,7,7,7,7,7,7,7,4,7,7,7,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,2,2],[0,0,0,0,0,0,0,0,7,7,7,7,7,7,7,4,7,7,7,7,7,7,4,7,4,7,7,7,7,7,7,7,7,0,7,0,0,0,0,2],[0,0,0,0,0,0,7,7,7,7,7,4,7,7,4,7,7,7,7,7,7,7,7,7,4,7,7,7,7,7,7,4,7,7,0,0,0,0,0,2]],
+  "terrain": [[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0,0,5,0,0,0,1,1,1,1,1,1,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0,5,0,0,0,0,0,1,1,1,1,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,5,0,0,0,0,1,1,1,1,1,1,1,16,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,5,5,0,0,0,1,1,1,1,1,16,17,16,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,5,0,0,0,0,1,1,1,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,5,0,0,0,0,1,1,1,1,1,1,1,1],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,0,5,0,0,0,0,0,1,1,1,1,1,1,1],[0,0,0,0,0,0,5,5,5,5,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,0,5,0,0,0,0,0,1,1,1,1,1,1,1],[0,0,0,5,5,5,5,7,7,5,5,5,5,0,0,0,0,0,0,0,0,0,2,2,2,3,3,4,0,0,0,0,0,1,1,1,1,1,16,1],[5,5,5,5,7,7,7,7,4,7,7,0,0,5,5,5,5,5,5,5,0,0,2,2,3,3,2,2,4,4,16,16,0,0,0,0,1,1,17,17],[0,0,0,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,5,5,5,5,3,3,2,2,2,2,0,0,16,16,17,0,0,0,16,17,16],[0,0,0,7,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,0,16,17,16,16,16,0,0],[0,0,0,7,7,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0,0,0,0,0,0],[0,0,0,0,7,4,7,7,4,7,7,7,7,7,0,0,0,0,0,0,0,0,0,7,4,2,2,2,2,2,2,2,0,0,0,0,0,0,0,0],[0,0,0,0,7,7,7,7,4,7,7,7,7,7,0,0,0,0,0,0,0,0,0,7,4,4,2,2,2,2,2,2,2,0,0,0,0,0,0,0],[0,0,0,0,0,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,7,4,2,2,2,2,2,2,2,0,0,0,0,0,0,0],[0,0,0,0,0,7,7,7,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,4,4,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,4,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,0,0,0,0],[0,0,0,0,0,0,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0,0,0],[0,0,0,0,0,0,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,4,2,2,2,2,2,2,2,0,0,0],[0,0,0,0,0,0,0,0,7,4,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,4,2,2,2,2,2,2,2,2,0,0],[0,0,0,0,0,0,0,7,7,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,2,0],[0,0,0,0,0,0,0,7,4,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2,0],[0,0,0,0,0,0,0,7,7,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,0,0,0,0,0,0,0,2,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,7,7,0,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,2,2,2],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,7,7,4,7,0,7,7,7,7,0,0,7,7,0,0,0,0,0,0,0,0,2,2,2],[0,0,0,0,0,0,0,0,0,7,7,7,7,7,7,7,7,7,4,7,7,7,7,7,7,7,7,7,7,7,7,0,0,0,0,0,0,0,2,2],[0,0,0,0,0,0,0,0,7,7,7,7,7,7,7,4,7,7,7,7,7,7,4,7,4,7,7,7,7,7,7,7,7,0,7,0,0,0,0,2],[0,0,0,0,0,0,7,7,7,7,7,4,7,7,4,7,7,7,7,7,7,7,7,7,4,7,7,7,7,7,7,4,7,7,0,0,0,0,0,2]],
   "entities": [
     {
       "type": "entrance",
       "x": 18,
       "y": 37
+    },
+    {
+      "type": "entrance",
+      "number": 2,
+      "x": 38,
+      "y": 9
+    },
+    {
+      "type": "entrance",
+      "number": 3,
+      "x": 38,
+      "y": 3
     },
     {
       "type": "message",
@@ -28,6 +40,20 @@
       "number": 1,
       "x": 18,
       "y": 37
+    },
+    {
+      "type": "exit",
+      "toDungeon": "bouldercave",
+      "number": 1,
+      "x": 38,
+      "y": 8
+    },
+    {
+      "type": "exit",
+      "toDungeon": "bouldercave",
+      "number": 2,
+      "x": 38,
+      "y": 2
     }
   ]
 }
