--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,4 @@ RewriteRule    ^game$             index.php?include=game.php          [QSA]
 RewriteRule    ^character$        index.php?include=character.php     [QSA]
 RewriteRule    ^logout$           index.php?include=logout.php        [QSA]
 RewriteRule    ^editor$           index.php?include=editor.php        [QSA]
+RewriteRule    ^chatlounge$           index.php?include=chat.php        [QSA]
